--- a/notebooks/AgamPrimer-short.ipynb
+++ b/notebooks/AgamPrimer-short.ipynb
@@ -44,7 +44,7 @@
         "**Author**: [Sanjay Curtis Nagi](https://sanjaynagi.github.io/)    \n",
         "**Email**: sanjay.nagi@lstmed.ac.uk  \n",
         "\n",
-        "This notebook allows users to run AgamPrimer, without running the full, extended colaboratory [notebook](https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/notebooks/AgamPrimer-long.ipynb)."
+        "Welcome to the short AgamPrimer notebook. This notebook allows users to run AgamPrimer, without running the full, extended colaboratory [notebook](https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/notebooks/AgamPrimer-long.ipynb)."
       ]
     },
     {
