--- a/notebooks/AgamPrimer-long.ipynb
+++ b/notebooks/AgamPrimer-long.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/notebooks/AgamPrimer-long.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -90,18 +90,10 @@
         "n_primer_pairs = 6            #@param {type:\"slider\", min:1, max:20, step:1}\n",
         "\n",
         "#@markdown    \n",
-        "#@markdown target_loc is required for gDNA primers and probes, and transcript required for cDNA primers.\n",
-        "contig =  \"2L\"                #@param ['2L', '2R', '3L', '3R', 'X']\n",
+        "#@markdown target should be a region string ('2L:28545767') for gDNA primers and probes, and an AGAP transcript identifier for cDNA primers.\n",
         "\n",
-        "target_loc =  '0 '                #@param {type:\"string\"}\n",
-        "target_loc = int(target_loc)\n",
-        "transcript =  'AGAP006222-RA'         #@param {type:\"string\"} \n",
-        "\n",
-        "\n",
-        "if any(item in assay_type for item in ['gDNA', 'probe']):\n",
-        "  assert target_loc > 0, \"Target location must be above 0 and less than the contig length\"\n",
-        "elif assay_type == 'cDNA primers':\n",
-        "  assert len(transcript) > 2, \"Transcript ID is not valid, should be vectorbase ID such as 'AGAP004707-RD'\""
+        "target = 'AGAP006222-RA'         #@param {type:\"string\"} \n",
+        "contig, target = AgamPrimer.check_and_split_target(target)"
       ]
     },
     {
@@ -148,12 +140,13 @@
       },
       "outputs": [],
       "source": [
-        "if any(item in assay_type for item in ['gDNA', 'probe']):\n",
-        "  # genomic DNA\n",
-        "  target_sequence, gdna_pos, seq_parameters = AgamPrimer.prepare_gDNA_sequence(target_loc=target_loc, amplicon_size_range=amplicon_size_range, genome_seq=genome_seq, assay_name=assay_name, assay_type=assay_type)\n",
-        "elif assay_type == 'cDNA primers':\n",
-        "  # quantitative PCR \n",
-        "  target_sequence, exon_junctions, gdna_pos, seq_parameters = AgamPrimer.prepare_cDNA_sequence(transcript=transcript, gff=ag3.geneset(), genome_seq=genome_seq, assay_name=assay_name)"
+        "target_sequence, gdna_pos, seq_parameters = AgamPrimer.prepare_sequence(\n",
+        "                                                                target=target,\n",
+        "                                                                assay_type=assay_type,\n",
+        "                                                                assay_name=assay_name,\n",
+        "                                                                genome_seq=genome_seq,\n",
+        "                                                                amplicon_size_range=amplicon_size_range\n",
+        "                                                                )"
       ]
     },
     {
@@ -510,9 +503,8 @@
       "outputs": [],
       "source": [
         "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
-        "                                   target=2422652 ,#'AGAP000818-RA',            # target should be an AGAP transcript identifier in for qPCR, otherwise should be an integer in genome\n",
-        "                                   assay_name='vgsc-995f',\n",
-        "                                   contig='2L',\n",
+        "                                   target='2L:2422652' ,#'AGAP000818-RA',            # target should be an AGAP transcript identifier in for qPCR, otherwise should be an integer in genome\n",
+        "                                   assay_name='chrom_x_region',\n",
         "                                   n_primer_pairs=5,\n",
         "                                   min_amplicon_size=60,\n",
         "                                   max_amplicon_size=120,\n",
@@ -558,9 +550,9 @@
   ],
   "metadata": {
     "colab": {
+      "include_colab_link": true,
       "name": "Primer Design in Anopheles gambiae.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
