sample set to sample sets

--- a/notebooks/AgamPrimer-long.ipynb
+++ b/notebooks/AgamPrimer-long.ipynb
@@ -371,7 +371,7 @@
       },
       "outputs": [],
       "source": [
-        "sample_set = 'AG1000G-GH'          # sample_set = '3.0' .you can also supply lists with multiple sample sets e.g ['AG1000G-GH', 'AG1000G-CI', 'AG1000G-BF-A']\n",
+        "sample_sets = 'AG1000G-GH'          # sample_set = '3.0' .you can also supply lists with multiple sample sets e.g ['AG1000G-GH', 'AG1000G-CI', 'AG1000G-BF-A']\n",
         "sample_query = \"taxon == 'coluzzii'\"                # here we can subset to specific values in the metadata e.g :     \"taxon == 'gambiae'\" , or \"taxon == 'arabiensis'\"          "
       ]
     },
@@ -402,7 +402,7 @@
         "    primer_df=primer_df,\n",
         "    gdna_pos=gdna_pos,\n",
         "    contig=contig,\n",
-        "    sample_set=sample_set, \n",
+        "    sample_sets=sample_sets, \n",
         "    sample_query=sample_query,\n",
         "    assay_type=assay_type,\n",
         "    seq_parameters=seq_parameters,\n",
@@ -433,7 +433,6 @@
         "    primer_df=primer_df, \n",
         "    primer_res_dict=results_dict,\n",
         "    assay_type=assay_type, \n",
-        "    gff=ag3.geneset(), \n",
         "    contig=contig, \n",
         "    seq_parameters=seq_parameters, \n",
         "    legend_loc='lower left',\n",
@@ -509,7 +508,7 @@
         "                                   min_amplicon_size=60,\n",
         "                                   max_amplicon_size=120,\n",
         "                                   primer_parameters=\"default\",\n",
-        "                                   sample_set=['AG1000G-BF-A', 'AG1000G-GH', 'AG1000G-GN-A'],\n",
+        "                                   sample_sets=['AG1000G-BF-A', 'AG1000G-GH', 'AG1000G-GN-A'],\n",
         "                                   out_dir=\".\")"
       ]
     },
