--- a/notebooks/AgamPrimer-long.ipynb
+++ b/notebooks/AgamPrimer-long.ipynb
@@ -150,7 +150,7 @@
    "source": [
     "# Connect to the malariagen_data ag3 API\n",
     "ag3 = malariagen_data.Ag3(url='gs://vo_agam_release/')\n",
-    "contig, target = AgamPrimer.check_and_split_target(target)\n",
+    "contig, target = AgamPrimer.check_and_split_target(target=target, assay_type=assay_type)\n",
     "genome_seq = ag3.genome_sequence(region=contig)\n",
     "print(f\"Our genome sequence for {contig} is {genome_seq.shape[0]} bp long\")"
    ]
