--- a/notebooks/AgamPrimer-long.ipynb
+++ b/notebooks/AgamPrimer-long.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "528ae85d",
    "metadata": {
     "id": "528ae85d"
@@ -106,6 +106,7 @@
     "max_amplicon_size = 120      #@param {type:\"integer\"}\n",
     "amplicon_size_range = [[min_amplicon_size, max_amplicon_size]]\n",
     "n_primer_pairs = 6            #@param {type:\"slider\", min:1, max:20, step:1}\n",
+    "cDNA_exon_junction=True #ignore\n",
     "\n",
     "#@markdown    \n",
     "#@markdown target should be a region string ('2L:28545767') for gDNA primers and probes, and an AGAP transcript identifier for cDNA primers.\n",
@@ -188,7 +189,8 @@
     "                                                                assay_type=assay_type,\n",
     "                                                                assay_name=assay_name,\n",
     "                                                                genome_seq=genome_seq,\n",
-    "                                                                amplicon_size_range=amplicon_size_range\n",
+    "                                                                amplicon_size_range=amplicon_size_range,\n",
+    "                                                                cDNA_exon_junction=cDNA_exon_junction,\n",
     "                                                                )"
    ]
   },
@@ -537,6 +539,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "5ea12dd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#view help for function\n",
+    "AgamPrimer.designPrimers?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "fiakkk2m7RsS",
    "metadata": {
@@ -544,8 +557,8 @@
    },
    "outputs": [],
    "source": [
-    "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
-    "                                   target='2L:2422652' ,#'AGAP000818-RA',            # target should be an AGAP transcript identifier in for qPCR, otherwise should be an integer in genome\n",
+    "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',\n",
+    "                                   target='2L:2422652' ,\n",
     "                                   assay_name='chrom_x_region',\n",
     "                                   n_primer_pairs=5,\n",
     "                                   min_amplicon_size=60,\n",
@@ -597,7 +610,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
