--- a/notebooks/AnoPrimer-long.ipynb
+++ b/notebooks/AnoPrimer-long.ipynb
@@ -50,7 +50,7 @@
       ],
       "source": [
         "# First, install some packages we require\n",
-        "! pip install AnoPrimer -q "
+        "! pip install AgamPrimer -q "
       ]
     },
     {
@@ -63,7 +63,7 @@
       "outputs": [],
       "source": [
         "# Import libraries \n",
-        "import AnoPrimer\n",
+        "import AgamPrimer\n",
         "import malariagen_data\n",
         "import primer3\n",
         "import pandas as pd\n",
