--- a/notebooks/AnoPrimer-long.ipynb
+++ b/notebooks/AnoPrimer-long.ipynb
@@ -161,7 +161,7 @@
       "source": [
         "# Connect to the malariagen_data ag3 API\n",
         "ag3 = malariagen_data.Ag3(url='gs://vo_agam_release/')\n",
-        "contig, target = AnoPrimer.check_and_split_target(target=primer_target, assay_type=assay_type)\n",
+        "contig, target = AgamPrimer.check_and_split_target(target=primer_target, assay_type=assay_type)\n",
         "genome_seq = ag3.genome_sequence(region=contig)\n",
         "print(f\"Our genome sequence for {contig} is {genome_seq.shape[0]} bp long\")"
       ]
@@ -174,7 +174,7 @@
         "id": "144a37ce"
       },
       "source": [
-        "Now we need to extract the bit of sequence we need. We will use functions in the [AnoPrimer](https://pypi.org/project/AnoPrimer/) package."
+        "Now we need to extract the bit of sequence we need. We will use functions in the [AgamPrimer](https://pypi.org/project/AgamPrimer/) package."
       ]
     },
     {
@@ -199,7 +199,7 @@
         }
       ],
       "source": [
-        "target_sequence, gdna_pos, seq_parameters = AnoPrimer.prepare_sequence(\n",
+        "target_sequence, gdna_pos, seq_parameters = AgamPrimer.prepare_sequence(\n",
         "                                                                target=target,\n",
         "                                                                assay_type=assay_type,\n",
         "                                                                assay_name=assay_name,\n",
@@ -289,7 +289,7 @@
         "        # In the same format as above                       \n",
         "    }\n",
         "\n",
-        "primer_parameters = AnoPrimer.primer_params(primer_parameters=primer_parameters, assay_type=assay_type, n_primer_pairs=n_primer_pairs, amplicon_size_range=amplicon_size_range) ## adds some parameters depending on assay type"
+        "primer_parameters = AgamPrimer.primer_params(primer_parameters=primer_parameters, assay_type=assay_type, n_primer_pairs=n_primer_pairs, amplicon_size_range=amplicon_size_range) ## adds some parameters depending on assay type"
       ]
     },
     {
@@ -359,7 +359,7 @@
         }
       ],
       "source": [
-        "AnoPrimer.primer3_run_statistics(primer_dict, assay_type)"
+        "AgamPrimer.primer3_run_statistics(primer_dict, assay_type)"
       ]
     },
     {
@@ -632,7 +632,7 @@
         }
       ],
       "source": [
-        "primer_df = AnoPrimer.primer3_to_pandas(primer_dict=primer_dict, assay_type=assay_type)\n",
+        "primer_df = AgamPrimer.primer3_to_pandas(primer_dict=primer_dict, assay_type=assay_type)\n",
         "primer_df"
       ]
     },
@@ -1644,7 +1644,7 @@
         }
       ],
       "source": [
-        "results_dict = AnoPrimer.plot_primer_ag3_frequencies(\n",
+        "results_dict = AgamPrimer.plot_primer_ag3_frequencies(\n",
         "    primer_df=primer_df,\n",
         "    gdna_pos=gdna_pos,\n",
         "    contig=contig,\n",
@@ -1693,7 +1693,7 @@
         }
       ],
       "source": [
-        "AnoPrimer.plot_primer_locs(\n",
+        "AgamPrimer.plot_primer_locs(\n",
         "    primer_df=primer_df, \n",
         "    primer_res_dict=results_dict,\n",
         "    assay_type=assay_type, \n",
@@ -2271,7 +2271,7 @@
         }
       ],
       "source": [
-        "blat_result_df = AnoPrimer.gget_blat_genome(\n",
+        "blat_result_df = AgamPrimer.gget_blat_genome(\n",
         "    primer_df, \n",
         "    assay_type, \n",
         "    assembly='anoGam3'\n",
@@ -2300,7 +2300,7 @@
       "outputs": [],
       "source": [
         "#view help for function\n",
-        "AnoPrimer.designPrimers?"
+        "AgamPrimer.designPrimers?"
       ]
     },
     {
@@ -2378,7 +2378,7 @@
         }
       ],
       "source": [
-        "primer_df, blat_df = AnoPrimer.designPrimers(assay_type='gDNA primers + probe',\n",
+        "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',\n",
         "                                   target='2L:2422652' ,\n",
         "                                   assay_name='chrom_x_region',\n",
         "                                   n_primer_pairs=5,\n",
