--- a/notebooks/AnoPrimer-long.ipynb
+++ b/notebooks/AnoPrimer-long.ipynb
@@ -161,7 +161,7 @@
       "source": [
         "# Connect to the malariagen_data ag3 API\n",
         "ag3 = malariagen_data.Ag3(url='gs://vo_agam_release/')\n",
-        "contig, target = AgamPrimer.check_and_split_target(target=primer_target, assay_type=assay_type)\n",
+        "contig, target = AgamPrimer.check_and_split_target(species=species, target=primer_target, assay_type=assay_type)\n",
         "genome_seq = ag3.genome_sequence(region=contig)\n",
         "print(f\"Our genome sequence for {contig} is {genome_seq.shape[0]} bp long\")"
       ]
@@ -200,6 +200,7 @@
       ],
       "source": [
         "target_sequence, gdna_pos, seq_parameters = AgamPrimer.prepare_sequence(\n",
+        "                                                                species=species,\n",
         "                                                                target=target,\n",
         "                                                                assay_type=assay_type,\n",
         "                                                                assay_name=assay_name,\n",
@@ -1645,6 +1646,7 @@
       ],
       "source": [
         "results_dict = AgamPrimer.plot_primer_ag3_frequencies(\n",
+        "    species=species,\n",
         "    primer_df=primer_df,\n",
         "    gdna_pos=gdna_pos,\n",
         "    contig=contig,\n",
@@ -1694,6 +1696,7 @@
       ],
       "source": [
         "AgamPrimer.plot_primer_locs(\n",
+        "    species=species,\n",
         "    primer_df=primer_df, \n",
         "    primer_res_dict=results_dict,\n",
         "    assay_type=assay_type, \n",
@@ -2378,15 +2381,18 @@
         }
       ],
       "source": [
-        "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',\n",
-        "                                   target='2L:2422652' ,\n",
-        "                                   assay_name='chrom_x_region',\n",
-        "                                   n_primer_pairs=5,\n",
-        "                                   min_amplicon_size=60,\n",
-        "                                   max_amplicon_size=120,\n",
-        "                                   primer_parameters=\"default\",\n",
-        "                                   sample_sets=['AG1000G-BF-A', 'AG1000G-GH', 'AG1000G-GN-A'],\n",
-        "                                   out_dir=\".\")"
+        "primer_df, blat_df = AgamPrimer.designPrimers(\n",
+        "    species=species,\n",
+        "    assay_type='gDNA primers + probe',\n",
+        "    target='2L:2422652' ,\n",
+        "    assay_name='chrom_x_region',\n",
+        "    n_primer_pairs=5,\n",
+        "    min_amplicon_size=60,\n",
+        "    max_amplicon_size=120,\n",
+        "    primer_parameters=\"default\",\n",
+        "    sample_sets=['AG1000G-BF-A', 'AG1000G-GH', 'AG1000G-GN-A'],\n",
+        "    out_dir=\".\"\n",
+        ")"
       ]
     },
     {
