--- a/notebooks/AgamPrimer-short.ipynb
+++ b/notebooks/AgamPrimer-short.ipynb
@@ -40,11 +40,11 @@
     "id": "aygnIeKqQbUR"
    },
    "source": [
-    "##**[AnoPrimer](https://github.com/sanjaynagi/AnoPrimer): Primer design considering genetic variation in *Anopheles gambiae***\n",
+    "##**[AgamPrimer](https://github.com/sanjaynagi/AnoPrimer): Primer design considering genetic variation in *Anopheles gambiae* and *Anopheles funestus***\n",
     "**Author**: [Sanjay Curtis Nagi](https://sanjaynagi.github.io/)    \n",
     "**Email**: sanjay.nagi@lstmed.ac.uk  \n",
     "\n",
-    "This notebook allows users to run AnoPrimer, without running the full, extended colaboratory [notebook](https://colab.research.google.com/github/sanjaynagi/AnoPrimer/blob/main/notebooks/AnoPrimer-long.ipynb)."
+    "This notebook allows users to run AgamPrimer, without running the full, extended colaboratory [notebook](https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/notebooks/AgamPrimer-long.ipynb)."
    ]
   },
   {
