add samplesets to params ci

--- a/notebooks/AgamPrimer-long.ipynb
+++ b/notebooks/AgamPrimer-long.ipynb
@@ -100,7 +100,8 @@
         "#@markdown    \n",
         "#@markdown primer_target should be a region string ('2L:28545767') for gDNA primers and probes, and an AGAP transcript identifier for cDNA primers.\n",
         "\n",
-        "primer_target = 'AGAP006228-RA'      #@param {type:\"string\"} "
+        "primer_target = 'AGAP006228-RA'      #@param {type:\"string\"} \n",
+        "sample_sets = 'AG1000G-GH'           #@param {type:\"string\"}"
       ]
     },
     {
@@ -126,10 +127,10 @@
       },
       "outputs": [],
       "source": [
+        "data_resource = AgamPrimer.retrieve_data_resource(species)\n",
         "# Connect to the malariagen_data ag3 API\n",
-        "ag3 = malariagen_data.Ag3(url='gs://vo_agam_release/')\n",
         "contig, target = AgamPrimer.check_and_split_target(species=species, target=primer_target, assay_type=assay_type)\n",
-        "genome_seq = ag3.genome_sequence(region=contig)\n",
+        "genome_seq = data_resource.genome_sequence(region=contig)\n",
         "print(f\"Our genome sequence for {contig} is {genome_seq.shape[0]} bp long\")"
       ]
     },
@@ -377,7 +378,7 @@
       },
       "outputs": [],
       "source": [
-        "metadata = ag3.sample_metadata()"
+        "metadata = data_resource.sample_metadata()"
       ]
     },
     {
@@ -427,8 +428,8 @@
       },
       "outputs": [],
       "source": [
-        "sample_sets = 'AG1000G-GH'          # sample_set = '3.0' .you can also supply lists with multiple sample sets e.g ['AG1000G-GH', 'AG1000G-CI', 'AG1000G-BF-A']\n",
-        "sample_query = \"taxon == 'coluzzii'\"                # here we can subset to specific values in the metadata e.g :     \"taxon == 'gambiae'\" , or \"taxon == 'arabiensis'\"          "
+        "#sample_sets = None  #'AG1000G-GH'          # sample_set = '3.0' .you can also supply lists with multiple sample sets e.g ['AG1000G-GH', 'AG1000G-CI', 'AG1000G-BF-A']\n",
+        "sample_query = None  #\"taxon == 'coluzzii'\"                # here we can subset to specific values in the metadata e.g :     \"taxon == 'gambiae'\" , or \"taxon == 'arabiensis'\"          "
       ]
     },
     {
