--- a/notebooks/AgamPrimer-long.ipynb
+++ b/notebooks/AgamPrimer-long.ipynb
@@ -611,18 +611,18 @@
       },
       "outputs": [],
       "source": [
-        "primer_df, blat_df = AgamPrimer.designPrimers(\n",
-        "    species=species,\n",
-        "    assay_type='gDNA primers + probe',\n",
-        "    target='2L:2422652' ,\n",
-        "    assay_name='chrom_x_region',\n",
-        "    n_primer_pairs=5,\n",
-        "    min_amplicon_size=60,\n",
-        "    max_amplicon_size=120,\n",
-        "    primer_parameters=\"default\",\n",
-        "    sample_sets=['AG1000G-BF-A', 'AG1000G-GH', 'AG1000G-GN-A'],\n",
-        "    out_dir=\".\"\n",
-        ")"
+        "# primer_df, blat_df = AgamPrimer.designPrimers(\n",
+        "#     species=species,\n",
+        "#     assay_type='gDNA primers + probe',\n",
+        "#     target='X:2422652' ,\n",
+        "#     assay_name='chrom_x_region',\n",
+        "#     n_primer_pairs=5,\n",
+        "#     min_amplicon_size=60,\n",
+        "#     max_amplicon_size=120,\n",
+        "#     primer_parameters=\"default\",\n",
+        "#     #sample_sets=['AG1000G-BF-A', 'AG1000G-GH', 'AG1000G-GN-A'],\n",
+        "#     out_dir=\".\"\n",
+        "# )"
       ]
     },
     {
