use sample query for ci speed

--- a/notebooks/AgamPrimer-long.ipynb
+++ b/notebooks/AgamPrimer-long.ipynb
@@ -101,7 +101,8 @@
         "#@markdown primer_target should be a region string ('2L:28545767') for gDNA primers and probes, and an AGAP transcript identifier for cDNA primers.\n",
         "\n",
         "primer_target = 'AGAP006228-RA'      #@param {type:\"string\"} \n",
-        "sample_sets = 'AG1000G-GH'           #@param {type:\"string\"}"
+        "sample_sets = 'AG1000G-GH'           #@param {type:\"string\"}\n",
+        "sample_query = None #'taxon == \"coluzzii\"' "
       ]
     },
     {
@@ -429,7 +430,7 @@
       "outputs": [],
       "source": [
         "#sample_sets = None  #'AG1000G-GH'          # sample_set = '3.0' .you can also supply lists with multiple sample sets e.g ['AG1000G-GH', 'AG1000G-CI', 'AG1000G-BF-A']\n",
-        "sample_query = None  #\"taxon == 'coluzzii'\"                # here we can subset to specific values in the metadata e.g :     \"taxon == 'gambiae'\" , or \"taxon == 'arabiensis'\"          "
+        "#sample_query = None  #\"taxon == 'coluzzii'\"                # here we can subset to specific values in the metadata e.g :     \"taxon == 'gambiae'\" , or \"taxon == 'arabiensis'\"          "
       ]
     },
     {
