stop gget for funestus

--- a/notebooks/AgamPrimer-long.ipynb
+++ b/notebooks/AgamPrimer-long.ipynb
@@ -566,13 +566,14 @@
       },
       "outputs": [],
       "source": [
-        "blat_result_df = AgamPrimer.gget_blat_genome(\n",
-        "    primer_df, \n",
-        "    assay_type, \n",
-        "    assembly='anoGam3'\n",
-        ")\n",
+        "if species == 'gambiae_sl':\n",
+        "    blat_result_df = AgamPrimer.gget_blat_genome(\n",
+        "        primer_df, \n",
+        "        assay_type, \n",
+        "        assembly='anoGam3'\n",
+        "    )\n",
         "\n",
-        "blat_result_df"
+        "    blat_result_df"
       ]
     },
     {
